# patricoferris-www

./: .gitignore  .gitmodules  Makefile  README.md  dune  dune-project  index.html  patricoferris.opam  patricoferris.opam.template
data/css/: main.css
data/js/: dune  main.js  root.js
data/posts/: dune  prelude.ml  riscv.md  site.md
data/posts/mrdts/: index.md
data/posts/site/: index.md  prelude.ml
js/: dune
posts/: riscv.html  site.html
posts/drafts/mrdts/: index.html
posts/site/: index.html
src/: db.ml  dune  main.ml  mirage.ml
src/js/: dune  main.ml  root.ml  theme.ml
src/pipeline/: copy.ml  db.ml  dune  gcloud.ml  git_live.ml  main.ml  mirage.ml
src/pipeline/templates/: dune  home_template.eml  layout.eml  post.ml  post_intf.ml  post_template.eml
src/templates/: dune  layout.eml  post.ml  post_template.eml
